--- a/model-project-template-main/documents/draft/Dockerfile
+++ b/model-project-template-main/documents/draft/Dockerfile
@@ -16,7 +16,7 @@ RUN pip3 install --upgrade pip
 RUN pip3 install nnf
 RUN pip3 install bauhaus
 RUN pip3 install requests 
-RUN pip3 install json
+# RUN pip3 install json
 
 # install dsharp to run in the container
 RUN curl https://mulab.ai/cisc-204/dsharp -o /usr/local/bin/dsharp
